<?xml version="1.0"?>
<package format="2">
  <name>tb3_detect</name>
  <version>0.0.0</version>
  <description>The tb3_detect package</description>
  <maintainer email="scotthadzik@weber.edu">Scott Hadzik</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum34</exec_depend>
</package>
