<?xml version="1.0"?>
<package format="2">
  <name>tb3_driving</name>
  <version>0.0.0</version>
  <description>The tb3_driving package</description>
  <maintainer email="scott@todo.todo">scott</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>tb3_msgs</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum34</exec_depend>

</package>
